@@ -1,6 +1,6 @@
 Name: octcdf
-Version: 1.1.8
-Date: 2015-03-10
+Version: 1.1.9
+Date: 2015-06-10
 Author: Alexander Barth <barth.alexander@gmail.com>
 Maintainer: Alexander Barth <barth.alexander@gmail.com>
 Title: octcdf
